Add cymbal -openhat, style position and outer box-shadow

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 
     <div class="drumkit">
 
-      <div class="cymbal">
+      <div class="cymbal-hihat">
         <div class="cymbal-shape"></div>
+        <div class="cymbal-shine-light"></div>
+        <div class="cymbal-shine-dark"></div>
+        <div class="cymbal-center"></div>
+      </div> <!-- closes cymbal -->
+
+      <div class="cymbal-openhat">
+        <div class="cymbal-shape-shadow"></div>
         <div class="cymbal-shine-light"></div>
         <div class="cymbal-shine-dark"></div>
         <div class="cymbal-center"></div>
