Added drun-tom and drum-skin + drum body box-shadow

--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
         <div class="cymbal-shine-light"></div>
         <div class="cymbal-shine-dark"></div>
         <div class="cymbal-center"></div>
-      </div> <!-- closes cymbal -->
+      </div> <!-- closes cymbal-hihat -->
+
+      <div class="drum-tom">
+        <div class="drum-body"></div>
+        <div class="drum-skin"></div>
+      </div> <!-- closes drum-tom -->
 
       <div class="cymbal-openhat">
         <div class="cymbal-shape-shadow"></div>
         <div class="cymbal-shine-light"></div>
         <div class="cymbal-shine-dark"></div>
         <div class="cymbal-center"></div>
-      </div> <!-- closes cymbal -->
+      </div> <!-- closes cymbal-openhat -->
 
     </div> <!-- closes drumkit -->
 
