Add drum-snare; increase cymbal inset border; change cymbalshinelight colour and opacity

--- a/index.html
+++ b/index.html
@@ -19,17 +19,24 @@
         <div class="cymbal-center"></div>
       </div> <!-- closes cymbal-hihat -->
 
-      <div class="drum-tom">
-        <div class="drum-body"></div>
-        <div class="drum-skin"></div>
-      </div> <!-- closes drum-tom -->
-
       <div class="cymbal-openhat">
         <div class="cymbal-shape-shadow"></div>
         <div class="cymbal-shine-light"></div>
         <div class="cymbal-shine-dark"></div>
         <div class="cymbal-center"></div>
       </div> <!-- closes cymbal-openhat -->
+
+      <div class="drum-tom">
+        <div class="drum-body"></div>
+        <div class="drum-skin"></div>
+        <div class="drum-shine"></div>
+      </div> <!-- closes drum-tom -->
+
+      <div class="drum-snare">
+        <div class="drum-body"></div>
+        <div class="drum-skin"></div>
+        <div class="drum-shine"></div>
+      </div> <!-- closes drum-snare -->
 
     </div> <!-- closes drumkit -->
 
