Increase cymbal size; edit cymbal/drum postition; add drum-clips 1-6 on drums

--- a/index.html
+++ b/index.html
@@ -29,12 +29,24 @@
       <div class="drum-tom">
         <div class="drum-body"></div>
         <div class="drum-skin"></div>
+        <div class="drum-clip1"></div>
+        <div class="drum-clip2"></div>
+        <div class="drum-clip3"></div>
+        <div class="drum-clip4"></div>
+        <div class="drum-clip5"></div>
+        <div class="drum-clip6"></div>
         <div class="drum-shine"></div>
       </div> <!-- closes drum-tom -->
 
       <div class="drum-snare">
         <div class="drum-body"></div>
         <div class="drum-skin"></div>
+        <div class="drum-clip1"></div>
+        <div class="drum-clip2"></div>
+        <div class="drum-clip3"></div>
+        <div class="drum-clip4"></div>
+        <div class="drum-clip5"></div>
+        <div class="drum-clip6"></div>
         <div class="drum-shine"></div>
       </div> <!-- closes drum-snare -->
 
