--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
 
     <div class="drumkit">
 
+      <div class="drum-kick">
+        <div class="drum-kick-skin"></div>
+      </div> <!-- closes drum-kick -->
+
+      <div class="drum-tom">
+        <div class="drum-skin"></div>
+        <div class="drum-clip1"></div>
+        <div class="drum-clip2"></div>
+        <div class="drum-clip3"></div>
+        <div class="drum-clip4"></div>
+        <div class="drum-clip5"></div>
+        <div class="drum-clip6"></div>
+        <div class="drum-shine"></div>
+      </div> <!-- closes drum-tom -->
+
+      <div class="drum-snare">
+        <div class="drum-skin"></div>
+        <div class="drum-clip1"></div>
+        <div class="drum-clip2"></div>
+        <div class="drum-clip3"></div>
+        <div class="drum-clip4"></div>
+        <div class="drum-clip5"></div>
+        <div class="drum-clip6"></div>
+        <div class="drum-shine"></div>
+      </div> <!-- closes drum-snare -->
+
       <div class="cymbal-hihat">
         <div class="cymbal-shape"></div>
         <div class="cymbal-shine-light"></div>
@@ -26,29 +52,12 @@
         <div class="cymbal-center"></div>
       </div> <!-- closes cymbal-openhat -->
 
-      <div class="drum-tom">
-        <div class="drum-body"></div>
-        <div class="drum-skin"></div>
-        <div class="drum-clip1"></div>
-        <div class="drum-clip2"></div>
-        <div class="drum-clip3"></div>
-        <div class="drum-clip4"></div>
-        <div class="drum-clip5"></div>
-        <div class="drum-clip6"></div>
-        <div class="drum-shine"></div>
-      </div> <!-- closes drum-tom -->
-
-      <div class="drum-snare">
-        <div class="drum-body"></div>
-        <div class="drum-skin"></div>
-        <div class="drum-clip1"></div>
-        <div class="drum-clip2"></div>
-        <div class="drum-clip3"></div>
-        <div class="drum-clip4"></div>
-        <div class="drum-clip5"></div>
-        <div class="drum-clip6"></div>
-        <div class="drum-shine"></div>
-      </div> <!-- closes drum-snare -->
+      <div class="cymbal-ride">
+        <div class="cymbal-ride-shape"></div>
+        <div class="cymbal-ride-light"></div>
+        <div class="cymbal-ride-dark"></div>
+        <div class="cymbal-ride-center"></div>
+      </div> <!-- closes cymbal-ride -->
 
     </div> <!-- closes drumkit -->
 
