--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
       <div class="drum-kick">
         <div class="drum-kick-skin"></div>
+        <div class="drum-kick-clip1"></div>
+        <div class="drum-kick-clip2"></div>
+        <div class="drum-kick-clip3"></div>
+        <div class="drum-kick-clip4"></div>
+        <div class="drum-kick-clip5"></div>
+        <div class="drum-kick-clip6"></div>
+        <div class="drum-kick-shine"></div>
       </div> <!-- closes drum-kick -->
 
       <div class="drum-tom">
