Add drum-boom; re-position existing drums and cymbals; add shadow to cymbal-shape and replace cymbal-shape-shadow

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
         <div class="drum-shine"></div>
       </div> <!-- closes drum-snare -->
 
+      <div class="drum-boom">
+        <div class="drum-skin"></div>
+        <!-- <div class="drum-clip1"></div>
+        <div class="drum-clip2"></div>
+        <div class="drum-clip3"></div>
+        <div class="drum-clip4"></div>
+        <div class="drum-clip5"></div>
+        <div class="drum-clip6"></div> -->
+        <div class="drum-shine"></div>
+      </div> <!-- closes drum-boom -->
+
       <div class="cymbal-hihat">
         <div class="cymbal-shape"></div>
         <div class="cymbal-shine-light"></div>
@@ -53,7 +64,7 @@
       </div> <!-- closes cymbal-hihat -->
 
       <div class="cymbal-openhat">
-        <div class="cymbal-shape-shadow"></div>
+        <div class="cymbal-shape"></div>
         <div class="cymbal-shine-light"></div>
         <div class="cymbal-shine-dark"></div>
         <div class="cymbal-center"></div>
