--- a/index.html
+++ b/index.html
@@ -45,14 +45,25 @@
         <div class="drum-shine"></div>
       </div> <!-- closes drum-snare -->
 
-      <div class="drum-boom">
+      <div class="drum-tom2">
         <div class="drum-skin"></div>
-        <!-- <div class="drum-clip1"></div>
+        <div class="drum-clip1"></div>
         <div class="drum-clip2"></div>
         <div class="drum-clip3"></div>
         <div class="drum-clip4"></div>
         <div class="drum-clip5"></div>
-        <div class="drum-clip6"></div> -->
+        <div class="drum-clip6"></div>
+        <div class="drum-shine"></div>
+      </div> <!-- closes drum-tom2 -->
+
+      <div class="drum-boom">
+        <div class="drum-skin"></div>
+        <div class="drum-clip1"></div>
+        <div class="drum-clip2"></div>
+        <div class="drum-clip3"></div>
+        <div class="drum-clip4"></div>
+        <div class="drum-clip5"></div>
+        <div class="drum-clip6"></div>
         <div class="drum-shine"></div>
       </div> <!-- closes drum-boom -->
 
