html add all letter divs (move to end); style .letter, position each drum letter

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
         <div class="cymbal-ride-center"></div>
       </div> <!-- closes cymbal-ride -->
 
+      <div class="letter letter-kick">D</div>
+      <div class="letter letter-tom">K</div>
+      <div class="letter letter-snare">J</div>
+      <div class="letter letter-tom2">A</div>
+      <div class="letter letter-boom">G</div>
+      <div class="letter letter-hihat">S</div>
+      <div class="letter letter-openhat">F</div>
+      <div class="letter letter-ride">H</div>
+
     </div> <!-- closes drumkit -->
 
     <script type="text/javascript" src="script.js"></script>
