Add title text; update drumkit margin vh

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
       <div class="letter letter-openhat">F</div>
       <div class="letter letter-ride">H</div>
 
+      <p class="title play">Play</p>
+      <p class="title thedrums">the drums!</p>
+
     </div> <!-- closes drumkit -->
 
     <script type="text/javascript" src="script.js"></script>
