Replace cymbalshine box shadow with filter blur; add drumshinedark

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="drum-clip5"></div>
         <div class="drum-clip6"></div>
         <div class="drum-shine"></div>
+        <div class="drum-shine-dark"></div>
       </div> <!-- closes drum-boom -->
 
       <div class="cymbal-hihat">
@@ -97,8 +98,8 @@
       <div class="letter letter-openhat">F</div>
       <div class="letter letter-ride">H</div>
 
-      <p class="title play">Play</p>
-      <p class="title thedrums">the drums!</p>
+      <!-- <p class="title play">Play</p>
+      <p class="title thedrums">the drums!</p> -->
 
     </div> <!-- closes drumkit -->
 
