Reassign letters to drums; replace background image URL with GitHub link

--- a/index.html
+++ b/index.html
@@ -118,24 +118,24 @@
       </div> <!-- closes cymbal-ride -->
 
       <!-- letter divs for css -->
-      <div class="letter letter-kick">D</div>
-      <div class="letter letter-tom">K</div>
-      <div class="letter letter-snare">J</div>
-      <div class="letter letter-tom2">A</div>
-      <div class="letter letter-boom">G</div>
-      <div class="letter letter-hihat">S</div>
-      <div class="letter letter-openhat">F</div>
-      <div class="letter letter-ride">H</div>
+      <div class="letter letter-hihat">A</div>
+      <div class="letter letter-openhat">S</div>
+      <div class="letter letter-snare">D</div>
+      <div class="letter letter-tom">F</div>
+      <div class="letter letter-kick">G</div>
+      <div class="letter letter-tom2">H</div>
+      <div class="letter letter-ride">J</div>
+      <div class="letter letter-boom">K</div>
 
-      <!-- letter- divs for scss -->
-      <!-- <div class="letter-kick">D</div>
-      <div class="letter-tom">K</div>
-      <div class="letter-snare">J</div>
-      <div class="letter-tom2">A</div>
-      <div class="letter-boom">G</div>
-      <div class="letter-hihat">S</div>
-      <div class="letter-openhat">F</div>
-      <div class="letter-ride">H</div> -->
+      <!-- letter divs for scss -->
+      <!--<div class="letter-hihat">A</div>
+      <div class="letter-openhat">S</div>
+      <div class="letter-snare">D</div>
+      <div class="letter-tom">F</div>
+      <div class="letter-kick">G</div>
+      <div class="letter-tom2">H</div>
+      <div class="letter-ride">J</div>
+      <div class="letter-boom">K</div>-->
 
       <!-- <p class="title play">Play</p>
       <p class="title thedrums">the drums!</p> -->
