Add <kbd> tag and data-key value to letters

--- a/index.html
+++ b/index.html
@@ -118,14 +118,30 @@
       </div> <!-- closes cymbal-ride -->
 
       <!-- letter divs for css -->
-      <div class="letter letter-hihat">A</div>
-      <div class="letter letter-openhat">S</div>
-      <div class="letter letter-snare">D</div>
-      <div class="letter letter-tom">F</div>
-      <div class="letter letter-kick">G</div>
-      <div class="letter letter-tom2">H</div>
-      <div class="letter letter-ride">J</div>
-      <div class="letter letter-boom">K</div>
+      <div data-key="65" class="letter letter-hihat">
+        <kbd>A</kbd>
+      </div>
+      <div data-key="83" class="letter letter-openhat">
+        <kbd>S</kbd>
+      </div>
+      <div data-key="68" class="letter letter-snare">
+        <kbd>D</kbd>
+      </div>
+      <div data-key="70" class="letter letter-tom">
+        <kbd>F</kbd>
+      </div>
+      <div data-key="71" class="letter letter-kick">
+        <kbd>G</kbd>
+      </div>
+      <div data-key="72" class="letter letter-tom2">
+        <kbd>H</kbd>
+      </div>
+      <div data-key="74" class="letter letter-ride">
+        <kbd>J</kbd>
+      </div>
+      <div data-key="75" class="letter letter-boom">
+        <kbd>K</kbd>
+      </div>
 
       <!-- letter divs for scss -->
       <!--<div class="letter-hihat">A</div>
