Add class .key to letters and add <audio>; copy JS from Javascript30 file

--- a/index.html
+++ b/index.html
@@ -118,41 +118,40 @@
       </div> <!-- closes cymbal-ride -->
 
       <!-- letter divs for css -->
-      <div data-key="65" class="letter letter-hihat">
+      <div data-key="65" class="key letter letter-hihat">
         <kbd>A</kbd>
       </div>
-      <div data-key="83" class="letter letter-openhat">
+      <div data-key="83" class="key letter letter-openhat">
         <kbd>S</kbd>
       </div>
-      <div data-key="68" class="letter letter-snare">
+      <div data-key="68" class="key letter letter-snare">
         <kbd>D</kbd>
       </div>
-      <div data-key="70" class="letter letter-tom">
+      <div data-key="70" class="key letter letter-tom">
         <kbd>F</kbd>
       </div>
-      <div data-key="71" class="letter letter-kick">
+      <div data-key="71" class="key letter letter-kick">
         <kbd>G</kbd>
       </div>
-      <div data-key="72" class="letter letter-tom2">
+      <div data-key="72" class="key letter letter-tom2">
         <kbd>H</kbd>
       </div>
-      <div data-key="74" class="letter letter-ride">
+      <div data-key="74" class="key letter letter-ride">
         <kbd>J</kbd>
       </div>
-      <div data-key="75" class="letter letter-boom">
+      <div data-key="75" class="key letter letter-boom">
         <kbd>K</kbd>
       </div>
 
-      <!-- letter divs for scss -->
-      <!--<div class="letter-hihat">A</div>
-      <div class="letter-openhat">S</div>
-      <div class="letter-snare">D</div>
-      <div class="letter-tom">F</div>
-      <div class="letter-kick">G</div>
-      <div class="letter-tom2">H</div>
-      <div class="letter-ride">J</div>
-      <div class="letter-boom">K</div>-->
-
+      <audio data-key="65" src="sounds/hihat.wav"></audio>
+      <audio data-key="83" src="sounds/openhat.wav"></audio>
+      <audio data-key="68" src="sounds/snare.wav"></audio>
+      <audio data-key="70" src="sounds/tom.wav"></audio>
+      <audio data-key="71" src="sounds/kick.wav"></audio>
+      <audio data-key="72" src="sounds/clap.wav"></audio>
+      <audio data-key="74" src="sounds/ride.wav"></audio>
+      <audio data-key="75" src="sounds/boom.wav"></audio>
+      
       <!-- <p class="title play">Play</p>
       <p class="title thedrums">the drums!</p> -->
 
