HTML remove <div> around <kbd>; rename title classes (avoid confusion with .play/.playing); CSS add line-height property to letters; adjust transform times

--- a/index.html
+++ b/index.html
@@ -117,31 +117,14 @@
         <div class="cymbal-ride-center"></div>
       </div> <!-- closes cymbal-ride -->
 
-      <!-- letter divs for css -->
-      <div data-key="65" class="key letter letter-hihat">
-        <kbd>A</kbd>
-      </div>
-      <div data-key="83" class="key letter letter-openhat">
-        <kbd>S</kbd>
-      </div>
-      <div data-key="68" class="key letter letter-snare">
-        <kbd>D</kbd>
-      </div>
-      <div data-key="70" class="key letter letter-tom">
-        <kbd>F</kbd>
-      </div>
-      <div data-key="71" class="key letter letter-kick">
-        <kbd>G</kbd>
-      </div>
-      <div data-key="72" class="key letter letter-tom2">
-        <kbd>H</kbd>
-      </div>
-      <div data-key="74" class="key letter letter-ride">
-        <kbd>J</kbd>
-      </div>
-      <div data-key="75" class="key letter letter-boom">
-        <kbd>K</kbd>
-      </div>
+      <kbd data-key="65" class="key letter letter-hihat">A</kbd>
+      <kbd data-key="83" class="key letter letter-openhat">S</kbd>
+      <kbd data-key="68" class="key letter letter-snare">D</kbd>
+      <kbd data-key="70" class="key letter letter-tom">F</kbd>
+      <kbd data-key="71" class="key letter letter-kick">G</kbd>
+      <kbd data-key="72" class="key letter letter-tom2">H</kbd>
+      <kbd data-key="74" class="key letter letter-ride">J</kbd>
+      <kbd data-key="75" class="key letter letter-boom">K</kbd>
 
       <audio data-key="65" src="sounds/hihat.wav"></audio>
       <audio data-key="83" src="sounds/openhat.wav"></audio>
@@ -151,9 +134,9 @@
       <audio data-key="72" src="sounds/clap.wav"></audio>
       <audio data-key="74" src="sounds/ride.wav"></audio>
       <audio data-key="75" src="sounds/boom.wav"></audio>
-      
-      <!-- <p class="title play">Play</p>
-      <p class="title thedrums">the drums!</p> -->
+
+      <!-- <p class="title text-play">Play</p>
+      <p class="title text-thedrums">the drums!</p> -->
 
     </div> <!-- closes drumkit -->
 
