Update .title .text-play .text-thedrums; add google font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>JS Drum Kit</title>
     <link rel="stylesheet" href="style-compiled.css">
+    <link href="https://fonts.googleapis.com/css?family=Vampiro+One" rel="stylesheet">
 
   </head>
 
@@ -135,11 +136,10 @@
       <audio data-key="74" src="sounds/ride.wav"></audio>
       <audio data-key="75" src="sounds/boom.wav"></audio>
 
-      <!-- <p class="title text-play">Play</p>
-      <p class="title text-thedrums">the drums!</p> -->
+      <p class="title text-play">Hit the keys,</p>
+      <p class="title text-thedrums">play the drums!</p>
 
     </div> <!-- closes drumkit -->
-
     <script type="text/javascript" src="script.js"></script>
 
   </body>
